# bborclient

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: release.yaml
.github/workflows/: release.yaml.disabled  test.yaml.disabled
src/bbor_client/: __init__.py  client.py  conf.py  gpxview.py  params.py  util.py
src/bbor_client/models/: base.py  constants.py  others.py  study.py  trial.py  user.py
src/bbor_client/params/post_study/: client.py  server.py
src/bbor_client/parsers/: 2ta.py  __init__.py  csv.py  interface.py  selector.py  xrdml.py
