[project]
name = "bbor_client"
version = "0.1.0"
description = "A python client library for the BBO-Rietveld API server"
readme = "README.md"
# license = {file = "LICENSE"}
authors = [
    { name = "suzukikensuke1", email = "kensuke_suzuki@ap.eng.osaka-u.ac.jp" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-abc>=0.2.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
parsexml = [
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ['src']
include = [
    "src/**",
    "README.md",
    "LICENSE",
]
exclude = [
  "tests/**",
  "uv.lock",
  ".python-version",
  "*.pyc",
  "__pycache__/**"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]
